syntax = "proto3";
package nostr;

service NostrRPC {
    rpc GetAllPublicKeys(GetAllPublicKeysRequest) returns (GetAllPublicKeysResponse);
}

message GetAllPublicKeysRequest {}

message GetAllPublicKeysResponse {
    repeated string public_keys = 1;
}
